compiler/tests/en/errors/type_mismatch.salam
// EXPECT: E002
func main:
    x := "hello" as int
end
